# softSynth

./: .clang-format  .clangd  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  STM32H750XX_FLASH.ld  cubemx-generate.txt  softSynth.ioc
App/: app.cpp  display.cpp  display.hpp  font8x8.hpp
App/dsp/: dsp_config.hpp  oscillator.cpp  oscillator.hpp
App/platform/: audio_out.cpp  audio_out.hpp  codec.cpp  codec.hpp  i2c4.cpp  i2c4.hpp  touch.cpp  touch.hpp
App/platform/wm8994/: .clang-format
Inc/: main.h  stm32h7xx_hal_conf.h
Src/: main.c  stm32h7xx_hal_msp.c
cmake/stm32cubemx/: CMakeLists.txt
test/: .clangd  CMakeLists.txt  render_wav.cpp  test_main.cpp  test_oscillator.cpp  wav_writer.hpp
